--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.13.2",
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -20,7 +21,9 @@
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "mongoose": "^8.19.4",
+    "node-cron": "^4.2.1",
     "nodemon": "^3.1.11",
-    "razorpay": "^2.9.6"
+    "razorpay": "^2.9.6",
+    "xml2js": "^0.6.2"
   }
 }
