--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.4",
+    "nanoid": "^5.1.6",
     "node-cron": "^4.2.1",
     "nodemon": "^3.1.11",
     "razorpay": "^2.9.6",
